[project]
name = "backupserver"
version = "0.0.1"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]


[[bin]]
name = "backupserver"
path = "src/server.rs"


[dependencies.reliable-rw]
git = "https://github.com/infinityb/reliable-rw-rust"


[dependencies.uuid]
git = "https://github.com/rust-lang/uuid"


[dependencies.phf]
git = "https://github.com/sfackler/rust-phf"

[dependencies.phf_mac]
git = "https://github.com/sfackler/rust-phf"
