[project]
name = "backupserver"
version = "0.0.1"
authors = ["Stacey Ell <stacey.ell@gmail.com>"]


[[bin]]
name = "backupserver"
path = "src/server.rs"


[[bin]]
name = "btrfs_concat"
path = "src/btrfs_concat.rs"


[[bin]]
name = "btrfs_command"
path = "src/btrfs_command.rs"


[dependencies.reliable-rw]
git = "https://github.com/infinityb/reliable-rw-rust"


[dependencies.uuid]
git = "https://github.com/rust-lang/uuid"


[dependencies.msgpack]
git = "git://github.com/mneumann/rust-msgpack.git"
